--- a/ads.plist
+++ b/ads.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://share.chs7.com/static/download/IQEA.ipa</string>
+                    <string>http://share.chs7.com/static/download/ads.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
@@ -23,7 +23,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>IQEA</string>
+                <string>ADS流量引擎</string>
             </dict>
         </dict>
     </array>
